--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,22 +1,22 @@
 \begin{tabular}{lr}
 \toprule
 {} &  Normalized\_Rank \\
-Name                       &                  \\
+Name                    &                  \\
 \midrule
-Limited Retaliate 3        &            0.286 \\
-Retaliate 3                &            0.297 \\
-Retaliate 2                &            0.302 \\
-Limited Retaliate 2        &            0.304 \\
-Limited Retaliate          &            0.311 \\
-Retaliate                  &            0.317 \\
-BackStabber                &            0.324 \\
-DoubleCrosser              &            0.331 \\
-Nice Meta Winner           &            0.350 \\
-PSO Gambler 2\_2\_2 Noise 05 &            0.351 \\
-Grudger                    &            0.352 \\
-NMWE Memory One            &            0.357 \\
-Evolved HMM 5              &            0.358 \\
-Nice Meta Winner Ensemble  &            0.359 \\
-Forgetful Fool Me Once     &            0.359 \\
+Evolved FSM 16          &            0.018 \\
+Evolved HMM 5           &            0.019 \\
+Evolved FSM 16 Noise 05 &            0.025 \\
+EvolvedLookerUp2\_2\_2    &            0.028 \\
+Evolved ANN             &            0.037 \\
+PSO Gambler 2\_2\_2       &            0.040 \\
+Evolved ANN 5           &            0.046 \\
+PSO Gambler 1\_1\_1       &            0.061 \\
+Fool Me Once            &            0.067 \\
+Evolved FSM 4           &            0.075 \\
+DoubleCrosser           &            0.079 \\
+Winner12                &            0.081 \\
+BackStabber             &            0.082 \\
+DBS                     &            0.086 \\
+PSO Gambler Mem1        &            0.089 \\
 \bottomrule
 \end{tabular}
